# mock-io

./: ChangeLog.md  README.md  mock-io.cabal
src/Data/Time/Clock/System/Effect/: Class.hs
src/System/IO/: Effect.hs
src/System/IO/Effect/: Class.hs
